--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row j_center mt-20">
+            <div class="col-8">
+                <div class="card">
+                    <div class="slide d_flex f_direction">
+                        <button class="">ips</button>
+                        <div class="images">
+                            <img class="w_100" src="./assets/img/01.webp" alt="">
+                            <img class="w_100" src="./assets/img/02.webp" alt="">
+                            <img class="w_100" src="./assets/img/03.webp" alt="">
+                            <img class="w_100 active" src="./assets/img/04.webp" alt="">
+                            <img class="w_100" src="./assets/img/05.webp" alt="">
+                        </div>
+                        <button class="">lorem</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
